# particles

./: .gitignore  .readthedocs.yaml  CHANGELOG  CONTRIBUTING.md  INSTALL  LICENSE  MANIFEST.in  README.md  binary_smc.py  pyproject.toml  requirements.md  requirements.txt  setup.py
book/filtering/: adaptive_resampling.py  comparing_bootstrap_guided_apf_lingauss.py  comparing_bootstrap_guided_apf_stochvol.py  neurodecoding.py
book/kalman/: check_kalman.py
book/mcmc/: compare_mcmc_samplers_stochvol.py
book/mle/: compare_smc_sqmc_malik_and_pitt.py  contour_loglik_ecological.py  contour_loglik_stochvol.py  hurzeler_kunsch.py  malikpitt_interpolation.py  mle_neuro.py  simulated_data_ecological.txt  variability_loglik_estimates.py
book/pmcmc/: pgibbs_ecological.py  pmmh_biased_lingauss.py  pmmh_cost.py  pmmh_lingauss.py  pmmh_lingauss_varying_scale.py  simulated_linGauss_T100_varX1_varY.04_rho.9.txt
book/resampling/: compare_cpu_time_resampling.py  compare_tv_distance_resampling.py
book/smc2/: smc2_stochvol_leverage.py
book/smc_samplers/: logistic_reg.py
book/smoothing/: offline_smoothing.py  online_smoothing.py  (+1 more)
datasets/: GBP_vs_USD_9798.txt  thaldata.csv
docs/: Makefile  mock_setup.py
particles/: __init__.py  binary_smc.py  collectors.py  controlled_smc.py  core.py  datasets.py  distributions.py  ensemble_transform.py  hilbert.py  hmm.py  kalman.py  mcmc.py  nested.py  qmc.py  resampling.py  rqmc.py  smc_samplers.py  smoothing.py  state_space_models.py  torch_int.py  utils.py  variance_estimators.py  variance_mcmc.py
src/: LowDiscrepancy.f
(+66 files in other folders)
