[build-system]
requires = ["setuptools >= 40.8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "particles"
description = "Sequential Monte Carlo in Python"
readme = "README.md"
version = "0.4"
requires-python = ">= 3.9"
authors = [
    { name = "Nicolas Chopin", email = "nicolas.chopin@ensae.fr" },
]
dependencies = [
    "joblib",
    "numba",
    "numpy >= 1.18, < 2",
    "scipy >= 1.7",
    "scikit-learn"
]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.license]
text = "MIT License"
files = ["LICENSE"]

[project.urls]
repository = "https://github.com/nchopin/particles"
documentation = "https://particles-sequential-monte-carlo-in-python.readthedocs.io/en/latest/"

[project.optional-dependencies]
extra = [
    "pandas",
    "statsmodels",
    "ipython",
    "seaborn",
    "matplotlib",
]

docs = [
    "sphinx == 7.0.1",
    "nbsphinx == 0.9.2"
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true

[tool.setuptools.package-data]
"particles.datasets" = ["*.csv", "*.txt", "*.data", "*.all-data"]
